# 1c-lsp-mcp-skill

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  quickstart.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error.rs  events.rs  java.rs  lib.rs  logging.rs  manager.rs  models.rs  paths.rs  runtime.rs  toon.rs  watcher.rs
crates/core/src/lsp/: client.rs  mod.rs  transport.rs
crates/core/tests/: toon_golden.rs
crates/core/tests/fixtures/: definition_locationlink.json  definition_locationlink.toon  diagnostics_simple.json  diagnostics_simple.toon  diagnostics_with_related.json  diagnostics_with_related.toon  document_symbol_nested.json  document_symbol_nested.toon  incoming_calls.json  incoming_calls.toon  references.json  references.toon  symbol_information_flat.json  symbol_information_flat.toon
crates/frontend/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json
crates/frontend/assets/: app.css
crates/frontend/src/: app.rs  main.rs
crates/frontend/src/api/: client.rs  sse.rs
crates/frontend/src/components/: file_browser.rs  log_viewer.rs  mod.rs  progress_bar.rs  status_badge.rs
crates/server/: Cargo.toml  build.rs
crates/server/assets/: AppIcon.icns  Info.plist
crates/server/src/: main.rs  runtime.rs  service.rs
crates/server/src/api/: mod.rs
crates/server/src/mcp/: mod.rs  protocol.rs
crates/server/src/web/: embedded.rs  mod.rs
crates/server/static/: app.css  app.js  index.html
scripts/: build-frontend.sh  release.sh
