[package]
name = "lsp-skill-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lsp-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
lsp-skill-core = { path = "../core" }
